[gd_scene load_steps=9 format=2]

[ext_resource path="res://assets/self-made/UI/Inventory_Bar.png" type="Texture" id=1]
[ext_resource path="res://assets/self-made/UI/SelectedBG.png" type="Texture" id=2]
[ext_resource path="res://UI/InventoryBar.gd" type="Script" id=3]
[ext_resource path="res://assets/self-made/weapons/Boxing_Gloves.png" type="Texture" id=4]
[ext_resource path="res://assets/self-made/weapons/Candy_Cane.png" type="Texture" id=5]
[ext_resource path="res://assets/self-made/weapons/Snow_Gun.png" type="Texture" id=6]
[ext_resource path="res://assets/self-made/weapons/Grenade_Launcher.png" type="Texture" id=7]
[ext_resource path="res://assets/self-made/weapons/Rudolphs_Nose.png" type="Texture" id=8]

[node name="InventoryBar" type="Node2D"]
position = Vector2( 471, 48 )
script = ExtResource( 3 )

[node name="Bar" type="Sprite" parent="."]
position = Vector2( -3.05176e-05, 0 )
scale = Vector2( 5, 5 )
texture = ExtResource( 1 )
region_enabled = true
region_rect = Rect2( 2, 2, 59, 9 )

[node name="Selected1" type="Sprite" parent="."]
position = Vector2( -110, 0 )
scale = Vector2( 0.51, 0.5 )
texture = ExtResource( 2 )
region_enabled = true
region_rect = Rect2( 40, 20, 90, 70 )

[node name="Selected2" type="Sprite" parent="."]
visible = false
position = Vector2( -55, 0 )
scale = Vector2( 0.51, 0.5 )
texture = ExtResource( 2 )
region_enabled = true
region_rect = Rect2( 40, 20, 90, 70 )

[node name="Selected3" type="Sprite" parent="."]
visible = false
scale = Vector2( 0.51, 0.5 )
texture = ExtResource( 2 )
region_enabled = true
region_rect = Rect2( 40, 20, 90, 70 )

[node name="Selected4" type="Sprite" parent="."]
visible = false
position = Vector2( 55, 0 )
scale = Vector2( 0.51, 0.5 )
texture = ExtResource( 2 )
region_enabled = true
region_rect = Rect2( 40, 20, 90, 70 )

[node name="Selected5" type="Sprite" parent="."]
visible = false
position = Vector2( 110, 0 )
scale = Vector2( 0.51, 0.5 )
texture = ExtResource( 2 )
region_enabled = true
region_rect = Rect2( 40, 20, 90, 70 )

[node name="BoxingGloves" type="Sprite" parent="."]
visible = false
position = Vector2( -110, 0 )
texture = ExtResource( 4 )
region_enabled = true
region_rect = Rect2( 5, 17, 30, 18 )

[node name="CandyCane" type="Sprite" parent="."]
visible = false
position = Vector2( -55, 3 )
rotation = -2.26893
scale = Vector2( 0.9, 0.9 )
texture = ExtResource( 5 )
region_enabled = true
region_rect = Rect2( 21, 1, 14, 49 )

[node name="SnowGun" type="Sprite" parent="."]
visible = false
rotation = 1.5708
scale = Vector2( 0.8, 0.8 )
texture = ExtResource( 6 )
region_enabled = true
region_rect = Rect2( 3, 3, 30, 54 )

[node name="GrenadeLauncher" type="Sprite" parent="."]
visible = false
position = Vector2( 55, 0 )
rotation = 1.5708
scale = Vector2( 0.45, 0.45 )
texture = ExtResource( 7 )
region_enabled = true
region_rect = Rect2( 20, 12, 40, 96 )

[node name="RudolphNose" type="Sprite" parent="."]
visible = false
position = Vector2( 110, 0 )
scale = Vector2( 0.3, 0.3 )
texture = ExtResource( 8 )
region_enabled = true
region_rect = Rect2( 10, 10, 85, 85 )
